[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmrg"
version = "0.0.1"
description = "DMRG"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Julio Candanedo", email = "julio@sparsetrace.ai" }
]

dependencies = [
  "torch>=2.2",
  "transformers>=4.40",
  "datasets>=2.18",
  "huggingface_hub>=0.20",
  "pillow>=10.0",
  "plotly==5.24.1",
  "modal>=0.64",
  "numpy>=1.24",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.3.0",
  "black>=24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
